# railclaw-pipeline

./: .gitignore  .pipeline.json.example  PLAN.md  README.md  architecture.md  eslint.config.mjs  openclaw.plugin.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
python/: pyproject.toml  requirements.txt
python/src/railclaw_pipeline/: __init__.py  cli.py  config.py  pipeline.py
python/src/railclaw_pipeline/events/: __init__.py  console.py  emitter.py  notifications.py
python/src/railclaw_pipeline/github/: __init__.py  board.py  checkpoint.py  gh.py  git.py  pr.py  review.py
python/src/railclaw_pipeline/milestone/: __init__.py  collector.py  runner.py
python/src/railclaw_pipeline/prompts/: __init__.py  loader.py
python/src/railclaw_pipeline/runner/: __init__.py  (+3 more)
python/tests/: conftest.py  test_agent_runner.py  test_approval_gate.py  test_circuit_breaker.py  test_cleanup.py  test_cli.py  test_emitter.py  test_gemini_polling.py  test_gh.py  test_git.py  test_injection_resistance.py  test_integration_detach.py  test_lock.py  test_milestone.py  test_notifications.py  test_notifications_integration.py  test_persistence.py  test_pid_lifecycle_integration.py  test_pid_management.py  test_poll_reviews.py  test_preflight_gate.py  test_preflight_integration.py  test_repair.py  test_repair_cli.py  test_resume.py  test_review_parsing.py  test_stage5_fix_loop.py  test_stage_merge.py  test_stage_pr.py  test_stage_preflight.py  test_state_models.py  test_subprocess_kill.py  test_subprocess_runner.py  test_timeout_cleanup.py  test_timeout_isolation.py
(+55 files in other folders)
